// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`screens oracle — backpack > 11 · slash /backpack with-char → emoji grid (quantity-2 item) + stat groups + 📦 Utility block 1`] = `
[
  {
    "arg": {
      "components": [
        {
          "components": [
            {
              "content": "🎒 **Backpack** (6/40)",
              "type": 10,
            },
            {
              "type": 14,
            },
            {
              "content": "⚔️ 🗡️ 🗡️ 🍞 🍞 🍞 ⬜ ⬜ ⬜ ⬜
⬜ ⬜ ⬜ ⬜ ⬜ ⬜ ⬜ ⬜ ⬜ ⬜
⬜ ⬜ ⬜ ⬜ ⬜ ⬜ ⬜ ⬜ ⬜ ⬜
⬜ ⬜ ⬜ ⬜ ⬜ ⬜ ⬜ ⬜ ⬜ ⬜

💪 **Physical** (+3)
├─ ⚔️ Iron Sword +2
└─ 🗡️ Throwing Daggers +1 x2

📦 **Utility**
└─ 🍞 Rations x3",
              "type": 10,
            },
          ],
          "type": 17,
        },
        {
          "components": [
            {
              "custom_id": "nav:hi",
              "emoji": {
                "name": "🌅",
              },
              "label": "Hi",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:journal",
              "emoji": {
                "name": "📖",
              },
              "label": "Journal",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:action",
              "emoji": {
                "name": "⚔️",
              },
              "label": "Action",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:look",
              "emoji": {
                "name": "👁️",
              },
              "label": "Look",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:stats",
              "emoji": {
                "name": "📊",
              },
              "label": "Stats",
              "style": 2,
              "type": 2,
            },
          ],
          "type": 1,
        },
        {
          "components": [
            {
              "custom_id": "nav:map",
              "emoji": {
                "name": "🗺️",
              },
              "label": "Map",
              "style": 2,
              "type": 2,
            },
          ],
          "type": 1,
        },
      ],
      "flags": 32832,
    },
    "method": "reply",
  },
]
`;

exports[`screens oracle — backpack > 12 · nav:backpack (with-char) → the same content + nav bar + stamp 1`] = `
[
  {
    "arg": {
      "components": [
        {
          "components": [
            {
              "content": "🎒 **Backpack** (6/40)",
              "type": 10,
            },
            {
              "type": 14,
            },
            {
              "content": "⚔️ 🗡️ 🗡️ 🍞 🍞 🍞 ⬜ ⬜ ⬜ ⬜
⬜ ⬜ ⬜ ⬜ ⬜ ⬜ ⬜ ⬜ ⬜ ⬜
⬜ ⬜ ⬜ ⬜ ⬜ ⬜ ⬜ ⬜ ⬜ ⬜
⬜ ⬜ ⬜ ⬜ ⬜ ⬜ ⬜ ⬜ ⬜ ⬜

💪 **Physical** (+3)
├─ ⚔️ Iron Sword +2
└─ 🗡️ Throwing Daggers +1 x2

📦 **Utility**
└─ 🍞 Rations x3",
              "type": 10,
            },
          ],
          "type": 17,
        },
        {
          "components": [
            {
              "custom_id": "nav:hi",
              "emoji": {
                "name": "🌅",
              },
              "label": "Hi",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:journal",
              "emoji": {
                "name": "📖",
              },
              "label": "Journal",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:action",
              "emoji": {
                "name": "⚔️",
              },
              "label": "Action",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:look",
              "emoji": {
                "name": "👁️",
              },
              "label": "Look",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:stats",
              "emoji": {
                "name": "📊",
              },
              "label": "Stats",
              "style": 2,
              "type": 2,
            },
          ],
          "type": 1,
        },
        {
          "components": [
            {
              "custom_id": "nav:map",
              "emoji": {
                "name": "🗺️",
              },
              "label": "Map",
              "style": 2,
              "type": 2,
            },
          ],
          "type": 1,
        },
      ],
      "flags": 32832,
    },
    "method": "reply",
  },
]
`;

exports[`screens oracle — backpack > 13 · nav:backpack charless → 'first' copy, no nav bar, no stamp 1`] = `
[
  {
    "arg": {
      "components": [
        {
          "components": [
            {
              "content": "You don't have a character. Type \`/join\` first.",
              "type": 10,
            },
          ],
          "type": 17,
        },
      ],
      "flags": 32832,
    },
    "method": "reply",
  },
]
`;

exports[`screens oracle — help > 17 · slash /help with-char → command list + Economy block; globals-only nav bar 1`] = `
[
  {
    "arg": {
      "components": [
        {
          "components": [
            {
              "content": "📜 **The Warden's Oak — Command List**",
              "type": 10,
            },
            {
              "type": 14,
            },
            {
              "content": "**Getting Started**
\`/join\` — Create your character (6-step wizard)
\`/hi\`   — Begin your day. The Oak awaits.

**Your Character**
\`/stats\`    — Full character sheet
\`/backpack\` — Inventory emoji grid

**The World**
\`/look\`    — Survey your surroundings
\`/journal\` — Browse your journal (locations, NPCs, actions)

**Actions**
\`/action\` — Take an action. Describe what you want to do.

The warden presents decisions, each one modifying the
difficulty check (DC). Choose wisely — bail if the odds
turn against you.

**Action types:** hunt, travel, talk, craft, scout, trade,
investigate, pray, perform, heal, train, sneak, and more.",
              "type": 10,
            },
            {
              "type": 14,
            },
            {
              "content": "**Economy**
You have **2 rolls per day**. Each \`/action\` consumes 1 roll.
Rolls reset at nightfall (admin \`/sleep\` or nightly cron).
Optional actions can be skipped (Bail or Skip button).
Required actions (attacked, cornered) cannot be skipped.

**Rest**
\`/sleep\` — Make camp by the Oak and rest. The world turns at
nightfall — only the warden can turn the hourglass.",
              "type": 10,
            },
            {
              "type": 14,
            },
            {
              "content": "**Report**
\`/feedback\` — Share your thoughts
\`/bug\`      — Report a bug
\`/help\`     — This list",
              "type": 10,
            },
          ],
          "type": 17,
        },
        {
          "components": [
            {
              "custom_id": "nav:hi",
              "emoji": {
                "name": "🌅",
              },
              "label": "Hi",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:journal",
              "emoji": {
                "name": "📖",
              },
              "label": "Journal",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:action",
              "emoji": {
                "name": "⚔️",
              },
              "label": "Action",
              "style": 2,
              "type": 2,
            },
          ],
          "type": 1,
        },
      ],
      "flags": 32832,
    },
    "method": "reply",
  },
]
`;

exports[`screens oracle — help > 18 · slash /help charless → the SAME content, NO gate reroute, characterExists never called 1`] = `
[
  {
    "arg": {
      "components": [
        {
          "components": [
            {
              "content": "📜 **The Warden's Oak — Command List**",
              "type": 10,
            },
            {
              "type": 14,
            },
            {
              "content": "**Getting Started**
\`/join\` — Create your character (6-step wizard)
\`/hi\`   — Begin your day. The Oak awaits.

**Your Character**
\`/stats\`    — Full character sheet
\`/backpack\` — Inventory emoji grid

**The World**
\`/look\`    — Survey your surroundings
\`/journal\` — Browse your journal (locations, NPCs, actions)

**Actions**
\`/action\` — Take an action. Describe what you want to do.

The warden presents decisions, each one modifying the
difficulty check (DC). Choose wisely — bail if the odds
turn against you.

**Action types:** hunt, travel, talk, craft, scout, trade,
investigate, pray, perform, heal, train, sneak, and more.",
              "type": 10,
            },
            {
              "type": 14,
            },
            {
              "content": "**Economy**
You have **2 rolls per day**. Each \`/action\` consumes 1 roll.
Rolls reset at nightfall (admin \`/sleep\` or nightly cron).
Optional actions can be skipped (Bail or Skip button).
Required actions (attacked, cornered) cannot be skipped.

**Rest**
\`/sleep\` — Make camp by the Oak and rest. The world turns at
nightfall — only the warden can turn the hourglass.",
              "type": 10,
            },
            {
              "type": 14,
            },
            {
              "content": "**Report**
\`/feedback\` — Share your thoughts
\`/bug\`      — Report a bug
\`/help\`     — This list",
              "type": 10,
            },
          ],
          "type": 17,
        },
      ],
      "flags": 32832,
    },
    "method": "reply",
  },
]
`;

exports[`screens oracle — journal > 14 · slash /journal with-char → chronicle (success + discovery rail, truncated failure) + NPC list + /map sign-off 1`] = `
[
  {
    "arg": {
      "components": [
        {
          "components": [
            {
              "content": "📖 **Aldric's Journal**",
              "type": 10,
            },
            {
              "type": 14,
            },
            {
              "content": "**📜 Chronicle**
🏚️ The Grey Hills · You crest the ridge and spy the Broken Keep below, its gate ajar. — ✅ **Success**
    └─ You sighted **The Broken Keep** on the north road.
🏛️ Town Square · The merchant's grin thins as you offer far too little for the smoked venison, and the haggling grinds on through the afternoon until the … — ❌ **Failed**",
              "type": 10,
            },
            {
              "type": 14,
            },
            {
              "content": "**🧑‍🤝‍🧑 NPCs Encountered**
• **Elara** the Herbalist (at The Warden's Oak)

*Use \`/map\` to see where you've been.*",
              "type": 10,
            },
          ],
          "type": 17,
        },
        {
          "components": [
            {
              "custom_id": "nav:hi",
              "emoji": {
                "name": "🌅",
              },
              "label": "Hi",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:action",
              "emoji": {
                "name": "⚔️",
              },
              "label": "Action",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:look",
              "emoji": {
                "name": "👁️",
              },
              "label": "Look",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:stats",
              "emoji": {
                "name": "📊",
              },
              "label": "Stats",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:backpack",
              "emoji": {
                "name": "🎒",
              },
              "label": "Backpack",
              "style": 2,
              "type": 2,
            },
          ],
          "type": 1,
        },
        {
          "components": [
            {
              "custom_id": "nav:map",
              "emoji": {
                "name": "🗺️",
              },
              "label": "Map",
              "style": 2,
              "type": 2,
            },
          ],
          "type": 1,
        },
      ],
      "flags": 32832,
    },
    "method": "reply",
  },
]
`;

exports[`screens oracle — journal > 15 · nav:journal (with-char) → the same content + nav bar + stamp 1`] = `
[
  {
    "arg": {
      "components": [
        {
          "components": [
            {
              "content": "📖 **Aldric's Journal**",
              "type": 10,
            },
            {
              "type": 14,
            },
            {
              "content": "**📜 Chronicle**
🏚️ The Grey Hills · You crest the ridge and spy the Broken Keep below, its gate ajar. — ✅ **Success**
    └─ You sighted **The Broken Keep** on the north road.
🏛️ Town Square · The merchant's grin thins as you offer far too little for the smoked venison, and the haggling grinds on through the afternoon until the … — ❌ **Failed**",
              "type": 10,
            },
            {
              "type": 14,
            },
            {
              "content": "**🧑‍🤝‍🧑 NPCs Encountered**
• **Elara** the Herbalist (at The Warden's Oak)

*Use \`/map\` to see where you've been.*",
              "type": 10,
            },
          ],
          "type": 17,
        },
        {
          "components": [
            {
              "custom_id": "nav:hi",
              "emoji": {
                "name": "🌅",
              },
              "label": "Hi",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:action",
              "emoji": {
                "name": "⚔️",
              },
              "label": "Action",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:look",
              "emoji": {
                "name": "👁️",
              },
              "label": "Look",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:stats",
              "emoji": {
                "name": "📊",
              },
              "label": "Stats",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:backpack",
              "emoji": {
                "name": "🎒",
              },
              "label": "Backpack",
              "style": 2,
              "type": 2,
            },
          ],
          "type": 1,
        },
        {
          "components": [
            {
              "custom_id": "nav:map",
              "emoji": {
                "name": "🗺️",
              },
              "label": "Map",
              "style": 2,
              "type": 2,
            },
          ],
          "type": 1,
        },
      ],
      "flags": 32832,
    },
    "method": "reply",
  },
]
`;

exports[`screens oracle — journal > 16 · nav:journal charless → 'first' copy, no nav bar, no stamp 1`] = `
[
  {
    "arg": {
      "components": [
        {
          "components": [
            {
              "content": "You don't have a character. Type \`/join\` first.",
              "type": 10,
            },
          ],
          "type": 17,
        },
      ],
      "flags": 32832,
    },
    "method": "reply",
  },
]
`;

exports[`screens oracle — look > 1 · slash /look with-char → full scene (code block, location, safe block, Paths, entities) + nav bar 1`] = `
[
  {
    "arg": {
      "components": [
        {
          "components": [
            {
              "content": "\`\`\`
...
\`\`\`

🌳 **The Warden's Oak**",
              "type": 10,
            },
            {
              "type": 14,
            },
            {
              "content": "The great oak at the heart of the Vale, its boughs heavy with lanterns.

🛡️ This is a **safe** location. Rest and recover.",
              "type": 10,
            },
            {
              "type": 14,
            },
            {
              "content": "**🧭 Paths**
  🏃 ⬆️ *uncharted* — _A thin trail climbs into the pines._
  🚶 ➡️ 🌳🛡️ Town Square",
              "type": 10,
            },
            {
              "type": 14,
            },
            {
              "content": "**🌟 Nearby Adventurers**
  **Bryn** — Rogue

**Other Figures**
  🌿 **Elara** — _An itinerant herbalist who claims the pines hide an old shrine to the forest mother, and who trades …_",
              "type": 10,
            },
          ],
          "type": 17,
        },
        {
          "components": [
            {
              "custom_id": "nav:hi",
              "emoji": {
                "name": "🌅",
              },
              "label": "Hi",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:journal",
              "emoji": {
                "name": "📖",
              },
              "label": "Journal",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:action",
              "emoji": {
                "name": "⚔️",
              },
              "label": "Action",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:stats",
              "emoji": {
                "name": "📊",
              },
              "label": "Stats",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:backpack",
              "emoji": {
                "name": "🎒",
              },
              "label": "Backpack",
              "style": 2,
              "type": 2,
            },
          ],
          "type": 1,
        },
        {
          "components": [
            {
              "custom_id": "nav:map",
              "emoji": {
                "name": "🗺️",
              },
              "label": "Map",
              "style": 2,
              "type": 2,
            },
          ],
          "type": 1,
        },
      ],
      "flags": 32832,
    },
    "method": "reply",
  },
]
`;

exports[`screens oracle — look > 2 · slash /look with-char at a null location → 'lost to the warden's sight'; no exits/entities reads 1`] = `
[
  {
    "arg": {
      "components": [
        {
          "components": [
            {
              "content": "You are at **The Warden's Oak**, but something feels off. The location is lost to the warden's sight.",
              "type": 10,
            },
          ],
          "type": 17,
        },
        {
          "components": [
            {
              "custom_id": "nav:hi",
              "emoji": {
                "name": "🌅",
              },
              "label": "Hi",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:journal",
              "emoji": {
                "name": "📖",
              },
              "label": "Journal",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:action",
              "emoji": {
                "name": "⚔️",
              },
              "label": "Action",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:stats",
              "emoji": {
                "name": "📊",
              },
              "label": "Stats",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:backpack",
              "emoji": {
                "name": "🎒",
              },
              "label": "Backpack",
              "style": 2,
              "type": 2,
            },
          ],
          "type": 1,
        },
        {
          "components": [
            {
              "custom_id": "nav:map",
              "emoji": {
                "name": "🗺️",
              },
              "label": "Map",
              "style": 2,
              "type": 2,
            },
          ],
          "type": 1,
        },
      ],
      "flags": 32832,
    },
    "method": "reply",
  },
]
`;

exports[`screens oracle — look > 3 · nav:look (with-char) → the same scene through the generic nav branch + stamp 1`] = `
[
  {
    "arg": {
      "components": [
        {
          "components": [
            {
              "content": "\`\`\`
...
\`\`\`

🌳 **The Warden's Oak**",
              "type": 10,
            },
            {
              "type": 14,
            },
            {
              "content": "The great oak at the heart of the Vale, its boughs heavy with lanterns.

🛡️ This is a **safe** location. Rest and recover.",
              "type": 10,
            },
            {
              "type": 14,
            },
            {
              "content": "**🧭 Paths**
  🏃 ⬆️ *uncharted* — _A thin trail climbs into the pines._
  🚶 ➡️ 🌳🛡️ Town Square",
              "type": 10,
            },
            {
              "type": 14,
            },
            {
              "content": "**🌟 Nearby Adventurers**
  **Bryn** — Rogue

**Other Figures**
  🌿 **Elara** — _An itinerant herbalist who claims the pines hide an old shrine to the forest mother, and who trades …_",
              "type": 10,
            },
          ],
          "type": 17,
        },
        {
          "components": [
            {
              "custom_id": "nav:hi",
              "emoji": {
                "name": "🌅",
              },
              "label": "Hi",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:journal",
              "emoji": {
                "name": "📖",
              },
              "label": "Journal",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:action",
              "emoji": {
                "name": "⚔️",
              },
              "label": "Action",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:stats",
              "emoji": {
                "name": "📊",
              },
              "label": "Stats",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:backpack",
              "emoji": {
                "name": "🎒",
              },
              "label": "Backpack",
              "style": 2,
              "type": 2,
            },
          ],
          "type": 1,
        },
        {
          "components": [
            {
              "custom_id": "nav:map",
              "emoji": {
                "name": "🗺️",
              },
              "label": "Map",
              "style": 2,
              "type": 2,
            },
          ],
          "type": 1,
        },
      ],
      "flags": 32832,
    },
    "method": "reply",
  },
]
`;

exports[`screens oracle — look > 4 · nav:look charless → 'first' copy, NO nav bar, no stamp, zero look reads 1`] = `
[
  {
    "arg": {
      "components": [
        {
          "components": [
            {
              "content": "You don't have a character. Type \`/join\` first.",
              "type": 10,
            },
          ],
          "type": 17,
        },
      ],
      "flags": 32832,
    },
    "method": "reply",
  },
]
`;

exports[`screens oracle — look > 5 · slash /look charless → character-gate reroute to the join wizard (deferReply + editReply, no look content) 1`] = `
[
  {
    "arg": {
      "flags": 64,
    },
    "method": "deferReply",
  },
  {
    "arg": {
      "components": [
        {
          "components": [
            {
              "custom_id": "join:name",
              "emoji": {
                "animated": false,
                "id": undefined,
                "name": "📝",
              },
              "label": "Enter Name",
              "style": 1,
              "type": 2,
            },
          ],
          "type": 1,
        },
      ],
      "embeds": [
        {
          "color": 14329120,
          "description": "📝 **Name** ◀
🛡️ Class
🌱 Upbringing
🧬 Race
⚖️ Alignment
🔧 Day Job
🎒 Starting Kit

__**Name**__
What shall the songs call you?",
          "footer": {
            "icon_url": undefined,
            "text": "Step 1 of 7 — 2-30 characters, no @ or #",
          },
          "thumbnail": {
            "url": "attachment://theoak.png",
          },
          "title": "⚔️  Forge Your Hero",
        },
      ],
      "files": [
        {
          "_attachment": "theoak.png",
        },
      ],
    },
    "method": "editReply",
  },
]
`;

exports[`screens oracle — map > 6 · slash /map with-char + place option → the focus drill-down (options.getString('place') path) 1`] = `
[
  {
    "arg": {
      "components": [
        {
          "components": [
            {
              "content": "🗺️ **Aldric's Map** — 3 charted · 1 road into the unknown",
              "type": 10,
            },
            {
              "type": 14,
            },
            {
              "content": "🏛️🛡️ **Town Square** · The Vale
├─ 🏃 ⬆️ 🏚️⚠️ The Broken Keep
└─ 🚶 ⬅️ 🌳🛡️ The Warden's Oak",
              "type": 10,
            },
          ],
          "type": 17,
        },
        {
          "components": [
            {
              "custom_id": "nav:hi",
              "emoji": {
                "name": "🌅",
              },
              "label": "Hi",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:journal",
              "emoji": {
                "name": "📖",
              },
              "label": "Journal",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:action",
              "emoji": {
                "name": "⚔️",
              },
              "label": "Action",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:look",
              "emoji": {
                "name": "👁️",
              },
              "label": "Look",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:stats",
              "emoji": {
                "name": "📊",
              },
              "label": "Stats",
              "style": 2,
              "type": 2,
            },
          ],
          "type": 1,
        },
        {
          "components": [
            {
              "custom_id": "nav:backpack",
              "emoji": {
                "name": "🎒",
              },
              "label": "Backpack",
              "style": 2,
              "type": 2,
            },
          ],
          "type": 1,
        },
      ],
      "flags": 32832,
    },
    "method": "reply",
  },
]
`;

exports[`screens oracle — map > 7 · nav:map (with-char, no options) → the full-map render + nav bar + stamp 1`] = `
[
  {
    "arg": {
      "components": [
        {
          "components": [
            {
              "content": "🗺️ **Aldric's Map** — 3 charted · 1 road into the unknown",
              "type": 10,
            },
            {
              "type": 14,
            },
            {
              "content": "**The Vale** (home)
🌳🛡️ The Warden's Oak  ◀ you are here
└─ 🏛️🛡️🚶 Town Square",
              "type": 10,
            },
            {
              "type": 14,
            },
            {
              "content": "**The Grey Hills**
🏚️⚠️ The Broken Keep",
              "type": 10,
            },
            {
              "type": 14,
            },
            {
              "content": "**Unexplored paths**
🌳 The Warden's Oak
└─ 🏃 ⬆️ A thin trail climbs into the pines.",
              "type": 10,
            },
          ],
          "type": 17,
        },
        {
          "components": [
            {
              "custom_id": "nav:hi",
              "emoji": {
                "name": "🌅",
              },
              "label": "Hi",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:journal",
              "emoji": {
                "name": "📖",
              },
              "label": "Journal",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:action",
              "emoji": {
                "name": "⚔️",
              },
              "label": "Action",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:look",
              "emoji": {
                "name": "👁️",
              },
              "label": "Look",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:stats",
              "emoji": {
                "name": "📊",
              },
              "label": "Stats",
              "style": 2,
              "type": 2,
            },
          ],
          "type": 1,
        },
        {
          "components": [
            {
              "custom_id": "nav:backpack",
              "emoji": {
                "name": "🎒",
              },
              "label": "Backpack",
              "style": 2,
              "type": 2,
            },
          ],
          "type": 1,
        },
      ],
      "flags": 32832,
    },
    "method": "reply",
  },
]
`;

exports[`screens oracle — map > 8 · nav:map charless → 'first' copy, no nav bar, no stamp 1`] = `
[
  {
    "arg": {
      "components": [
        {
          "components": [
            {
              "content": "You don't have a character. Type \`/join\` first.",
              "type": 10,
            },
          ],
          "type": 17,
        },
      ],
      "flags": 32832,
    },
    "method": "reply",
  },
]
`;

exports[`screens oracle — stats > 9 · nav:stats (with-char) → the stats sheet incl. the (+N base, +N 🎒) gear breakdown + nav bar + stamp 1`] = `
[
  {
    "arg": {
      "components": [
        {
          "components": [
            {
              "content": "⚔️  **Aldric** — Warrior",
              "type": 10,
            },
            {
              "type": 14,
            },
            {
              "content": "**Upbringing:** Village  |  **Race:** Human
**Alignment:** lawful good
**Day Job:** Town Guard

**Stats:**
  💪 PHY  +5  (+3 base, +2 🎒)
  🧠 WIS  +0  (-1 base, +1 🎒)
  📖 INT  +0
  💬 CHA  +0

**Health:** 10/10  |  **Stamina:** 10/10
**Location:** The Warden's Oak
**Wealth:** 5 copper  |  **Rolls:** 3",
              "type": 10,
            },
          ],
          "type": 17,
        },
        {
          "components": [
            {
              "custom_id": "nav:hi",
              "emoji": {
                "name": "🌅",
              },
              "label": "Hi",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:journal",
              "emoji": {
                "name": "📖",
              },
              "label": "Journal",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:action",
              "emoji": {
                "name": "⚔️",
              },
              "label": "Action",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:look",
              "emoji": {
                "name": "👁️",
              },
              "label": "Look",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:backpack",
              "emoji": {
                "name": "🎒",
              },
              "label": "Backpack",
              "style": 2,
              "type": 2,
            },
          ],
          "type": 1,
        },
        {
          "components": [
            {
              "custom_id": "nav:map",
              "emoji": {
                "name": "🗺️",
              },
              "label": "Map",
              "style": 2,
              "type": 2,
            },
          ],
          "type": 1,
        },
      ],
      "flags": 32832,
    },
    "method": "reply",
  },
]
`;

exports[`screens oracle — stats > 10 · nav:stats charless → 'first' copy, no nav bar, no stamp 1`] = `
[
  {
    "arg": {
      "components": [
        {
          "components": [
            {
              "content": "You don't have a character. Type \`/join\` first.",
              "type": 10,
            },
          ],
          "type": 17,
        },
      ],
      "flags": 32832,
    },
    "method": "reply",
  },
]
`;
